# workshops

./: .gitignore  README.md
agent-fastapi-vectordb/: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  engine.py  faq.py  feedback.md  fly.toml  ingest.py  notebook.ipynb  notebook.py  pyproject.toml  search.py  test.py
agent-fastapi-vectordb/frontend/: app.js  index.html  style.css
agent-skills/: README.md  gh-fetch-skill.md  notebook.ipynb
agent-skills/prototype/: Makefile  README.md  pyproject.toml
agent-skills/prototype/commands/: review.md  test.md
agent-skills/prototype/skills/deploy_app/scripts/: deploy.sh
agent-skills/prototype/skills/joke/: SKILL.md
agent-skills/prototype/src/: __init__.py  agent.py  commands.py  main.py  skill_tool.py  skills.py  tools.py
agent-skills/prototype/tests/: test_agent_run.py  test_agent_with_commands.py  test_agent_with_skills.py  test_commands.py  test_skills.py  utils.py
agentic-rag/: README.md  notebook.py  pyproject.toml  search_tools.py  test_search_tools.py
agents-lib/: README.md
agents-mcp/: README.md  main.py  notebook-groq.ipynb  notebook.ipynb  pyproject.toml
coding-agent/: .gitignore  README.md  agent-chat-completions-runner.ipynb  agent-sdk-runner.ipynb  agent-sdk.ipynb  agent.ipynb  agents-walkthough.ipynb  chat_assistant.py  maven-agents-workshop.ipynb  multiple-agents.ipynb  pydantic-ai-runner.ipynb  pydantic-ai.ipynb  start_agent.py  tools.py
coding-agent-v2/: README.md  plan.md
dezoomcamp-docker/: README.md
guardrails/: README.md  notebook.ipynb
mlzoomcamp-deep-learning/: README.md
mlzoomcamp-fastapi-uv/: pyproject.toml
mlzoomcamp-flask-uv/: README.md  predict.py  predict_old.py  test.py  (+1 more)
temporal.io/agent/: .env.example  README_TEMPORAL.md  agent.ipynb  agent.py  pyproject.toml  start_workflow.py  tools.py  worker.py  workflow.py
temporal.io/flow/: README.md  activities.py  create_index.py  elastic.ipynb  index_activities.py  index_workflow.py  notebook.ipynb  pyproject.toml  run_index_workflow.py  run_workflow.py  worker.py  workflow.py  youtube.ipynb
temporal.io/flow/data/: -Gj7SaI-QW4.txt  -HbQQ_bVdfE.txt  -i0fVp0ntYA.txt  -xumbiXOlA8.txt  0Fx5PCoLkf4.txt  0Gqx1LtqRZU.txt  0I2FHH95Ofs.txt  0RsmRjar66E.txt  0wANfIvum4U.txt  1pExOVuCF8Q.txt  2ZOnA19sDpM.txt  30tTrozbAkg.txt  346N_pCtYZU.txt  35Ch8xL2SA8.txt  3TTu-hYzxeg.txt  4RargY8iOaE.txt  6YBMU6475KQ.txt  6dn6uZFkk04.txt  7Bg1JQLnCao.txt  7ePp6wuxM5s.txt  7jgmIQGMhGE.txt  8Eb5mG-pC3o.txt  8v5KpHWgyYw.txt  9DTTrN-khCk.txt  AYi7b-8GPm4.txt  Af9t9r2b0z0.txt  B76J4QkZPWs.txt  BKqmNdxsBko.txt  ByCE1vSrIr8.txt  C5UcxBwdCEg.txt  CB1YIsxQRtc.txt  CpWlBAmD9ok.txt  DX9c__a4jzg.txt  DiDs5aMjEWg.txt  EQcY83VA0Us.txt  FQYTb4uWljQ.txt  F_rJ4fg5ZEA.txt  FljnbUQ796w.txt  GHbeXIKnkLQ.txt  GawJ7mG5ElQ.txt  (+114 more)
(+91 files in other folders)
