[project]
name = "agent-fastapi-vectordb"
version = "0.1.0"
description = "Deploy your AI agent project to production with FastAPI and a Vector DB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "sse-starlette>=2.1.3",
    "openai>=1.102.0",
    "minsearch>=0.0.4",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[tool.uv]
exclude-newer = "7 days"
