[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.2.0",
    "openai>=2.9.0",
    "pydantic-ai>=1.30.0",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
